add botoes checkin nas home admin e comum e inicio CRUD reserva

--- a/hotel/src/main/resources/static/homeFuncionarioAdmin.html
+++ b/hotel/src/main/resources/static/homeFuncionarioAdmin.html
@@ -48,18 +48,20 @@
                 <div class="cadastro">
                     <h1 class="negrito tituloCadastro">Selecione a Seção</h1>
                     <hr class="hrLaranja"/>
-                    <div class="cadastroEsquerda">
+                    <div class="cadastroEsquerda" style="margin-bottom: 50px;">
                         <div class="campoCadastroHome">
                             <input type="submit" value="Nova Reserva" class="negrito botaoFuncionarioAdmin pointer"/>
                         </div>
                         <div class="campoCadastroHome">
+                            <input type="submit" class="negrito botaoFuncionarioAdmin pointer" value="Checkin 
+Quartos Disponíveis"/>
+                        </div>
+                        
+                        <div class="campoCadastroHome">
                             <input type="submit" value="Funcionário" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
                         </div>
                         <div class="campoCadastroHome">
-                            <input type="submit" value="Quarto" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
-                        </div>
-                        <div class="campoCadastroHome">
-                            <input type="submit" value="Preços Diárias" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
+                            <input type="submit" value="Tipo de Cargo" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
                         </div>
                     </div>
                     <div class="cadastroDireita">
@@ -67,10 +69,13 @@
                             <input type="submit" value="Editar Reservas" class="negrito botaoFuncionarioAdmin pointer"/>
                         </div>
                         <div class="campoCadastroHome">
-                            <input type="submit" value="Tipo de Cargo" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
+                            <input style="margin: 20px 0 0 0;" type="submit" value="Quarto" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
                         </div>
                         <div class="campoCadastroHome">
                             <input type="submit" value="Tipo de Quarto" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
+                        </div>
+                        <div class="campoCadastroHome">
+                            <input type="submit" value="Preços Diárias" class="negrito botaoFuncionarioSistemaAdmin pointer"/>
                         </div>
                     </div>
                 </div>
