--- a/hotel/src/main/resources/static/homeFuncionarioComum.html
+++ b/hotel/src/main/resources/static/homeFuncionarioComum.html
@@ -52,6 +52,10 @@
                         <div class="campoCadastroHome">
                             <input type="submit" value="Nova Reserva" class="negrito botaoFuncionarioComum pointer"/>
                         </div>
+                        <div class="campoCadastroHome">
+                            <input type="submit" class="negrito botaoFuncionarioComum pointer" value="Checkin 
+Quartos Disponíveis"/>
+                        </div>
                     </div>
                     <div class="cadastroDireita">
                         <div class="campoCadastroHome">
