--- a/hotel/src/main/resources/static/reservaUsuario.html
+++ b/hotel/src/main/resources/static/reservaUsuario.html
@@ -159,7 +159,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected disabled>Quantidade de Quartos</option>
+                                    <option value="0" selected>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -210,7 +210,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected disabled>Quantidade de Quartos</option>
+                                    <option value="0" selected>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -265,7 +265,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected disabled>Quantidade de Quartos</option>
+                                    <option value="0" selected>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -321,7 +321,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected disabled>Quantidade de Quartos</option>
+                                    <option value="0" selected>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
