--- a/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
+++ b/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
@@ -9,7 +9,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
-        
+        <script src="js/storageManager.js"> </script>
+        <script src="js/tabela.js"></script>
     </head>
     <body>
         <div class="cabecalho">
@@ -26,7 +27,7 @@
             </div>
             <div class="nomeSair">
                 <h3 class="negrito branco">João Pereira Silva</h3>
-                <button class="pointer" onclick="" >Logout</button>
+                <button class="pointer" onclick="Logout()" id="logout" >Logout</button>
             </div>
         </div>
         <div class="navegacao">
@@ -38,41 +39,54 @@
         <form action="">
             <div class="cadastro">
                 <h1 class="negrito tituloCadastro">Cadastro Preços Diárias</h1>
-                <table id="tabelaPrecos">
+                <table class="table table-hover">
                     <tr>
                        <td class="negritoLinhas">Tipo de Quarto</td>
+                       <td class="negritoLinhas">Dia Ùtil</td>
+                       <td class="negritoLinhas">Fim de semana</td>
+                       <td class="negritoLinhas">Feriado</td>
+                       <td class="negritoLinhas">Promocional</td>
+                       <td></td>
+                    </tr>
+                    <tr>
                        <td class="negritoLinhas">Standart</td>
+                       <td>R$ 300,00</td>
+                       <td>R$ 300,00</td>
+                       <td>R$ 300,00</td>
+                       <td>R$ 300,00</td>
+                       <td>
+                       <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                       </td>
+                    </tr>
+                    <tr>
                        <td class="negritoLinhas">Master</td>
-                       <td class="negritoLinhas">Deluxe</td>
-                       <td class="negritoLinhas">Deluxe Plus</td>
+                       <td>R$ 300,00</td>
+                       <td>R$ 300,00</td>
+                       <td>R$ 300,00</td>
+                       <td>R$ 300,00</td>
+                       <td>
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        </td>
                     </tr>
                     <tr>
-                       <td class="negritoLinhas">Dia Útil</td>
+                       <td class="negritoLinhas">Delux</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
+                       <td>
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        </td>
                     </tr>
                     <tr>
-                       <td class="negritoLinhas">Diaría fim de semana</td>
+                       <td class="negritoLinhas">Delux Plus</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
-                    </tr>
-                    <tr>
-                       <td class="negritoLinhas">Diaria Feriado</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                    </tr>
-                    <tr>
-                       <td class="negritoLinhas">Diaria Promocional</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
+                       <td>
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        </td>
                     </tr>
                     <tr>
                        <td class="negritoLinhas">+ Novo tipo de Quarto</td>
@@ -80,6 +94,9 @@
                        <td></td>
                        <td></td>
                        <td></td>
+                       <td>
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        </td>
                     </tr>
                    </table>
                 <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
@@ -94,5 +111,33 @@
                 </div>
             </div>
         </footer>
+        <div class="popup">
+            <div id="editarPopup">
+                <form action="">
+                    <header class="headerPopup">
+                        <h1 class="tituloPopup negrito">Standart</h1> 
+                    </header>
+                    <div class="inputPopup">
+                        <label class="title-input">Dia Util</label>
+                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                    </div> 
+                    <div class="inputPopup">
+                        <label class="title-input">Fim de Semana</label>
+                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                    </div> 
+                    <div class="inputPopup">
+                        <label class="title-input">Feriado</label>
+                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                    </div> 
+                    <div class="inputPopup">
+                        <label class="title-input">Promocional</label>
+                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                    </div> 
+                    <footer class="footerPopup">
+                        <button type="button" class="buttonPopup buttonCancel close negrito" onclick="CloseEditPopup()">Cancelar </button>
+                        <button type="submit" class="buttonPopup buttonSuccess negrito">Salvar</button>
+                    </footer>
+                </form>
+            </div>
     </body>
     </html>
