cadastroQuarto com validacoes

--- a/hotel/src/main/resources/static/cadastroCargo.html
+++ b/hotel/src/main/resources/static/cadastroCargo.html
@@ -43,9 +43,9 @@
                 <div class="campoCadastro centralizarDiv">
                     <h1 class="negrito">Permissão</h1>
                     <select name="permissao" class="pointer">
-                        <option selected disabled>Selecione o Tipo de Permissão</option>
-                        <option value="admin">Admin</option>
-                        <option value="comum">Comum</option>
+                        <optgroup label='Selecione a Permissão do Cargo'>
+                        <option value="true">Admin</option>
+                        <option value="false">Comum</option>
                     </select>
                 </div>
                 <div class="botoesCadastro">
