--- a/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
+++ b/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
@@ -9,8 +9,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
-        <script src="js/storageManager.js"> </script>
+        <script src="js/storageManager.js"></script>
         <script src="js/tabela.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
     </head>
     <body>
         <div class="cabecalho">
@@ -49,17 +50,17 @@
                        <td></td>
                     </tr>
                     <tr>
-                       <td class="negritoLinhas">Standart</td>
+                       <td class="negritoLinhas" idquarto="1">Standart</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>
-                       <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                       <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(1);">
                        </td>
                     </tr>
                     <tr>
-                       <td class="negritoLinhas">Master</td>
+                       <td class="negritoLinhas" idquarto="2">Master</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
@@ -69,23 +70,23 @@
                         </td>
                     </tr>
                     <tr>
-                       <td class="negritoLinhas">Delux</td>
+                       <td class="negritoLinhas" idquarto="3">Deluxe</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(3);">
                         </td>
                     </tr>
                     <tr>
-                       <td class="negritoLinhas">Delux Plus</td>
+                       <td class="negritoLinhas" idquarto="4">Deluxe Plus</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>R$ 300,00</td>
                        <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(4);">
                         </td>
                     </tr>
                     <tr>
@@ -95,7 +96,7 @@
                        <td></td>
                        <td></td>
                        <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
+                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(5);">
                         </td>
                     </tr>
                    </table>
@@ -115,23 +116,23 @@
             <div id="editarPopup">
                 <form action="">
                     <header class="headerPopup">
-                        <h1 class="tituloPopup negrito">Standart</h1> 
+                        <h1 class="tituloPopup negrito" id="tituloEdit"></h1> 
                     </header>
                     <div class="inputPopup">
                         <label class="title-input">Dia Util</label>
-                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Fim de Semana</label>
-                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Feriado</label>
-                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Promocional</label>
-                        <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
                     </div> 
                     <footer class="footerPopup">
                         <button type="button" class="buttonPopup buttonCancel close negrito" onclick="CloseEditPopup()">Cancelar </button>
