reserva controller, reserva.js, inicio logica crud reserva

--- a/hotel/src/main/resources/static/checkinQuartoDisponivel.html
+++ b/hotel/src/main/resources/static/checkinQuartoDisponivel.html
@@ -60,9 +60,8 @@
                         <tr>
                             <form action="/tipoQuarto/save" method="post">
                                 <td><input type="text" class="centralText" name="tipoQuarto" required></td>
-                                
                                 <td>
-                                    <img src="img/buscar_lupa_30_30px.svg" class="botaoPopup pointer" onclick=" OpenDeletePopup(${value.idTipoQuarto})">
+                                    <img src="img/buscar_lupa_30_30px.svg" class="botaoPopup pointer" onclick=" OpenDeletePopup(//${value.idTipoQuarto})">
                                 </td>
                             </form>
                         </tr>
