--- a/hotel/src/main/resources/static/reservaUsuario.html
+++ b/hotel/src/main/resources/static/reservaUsuario.html
@@ -14,6 +14,7 @@
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/verificarUsuario.js"></script>
+    <script src="js/reserva.js"></script>
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -80,26 +81,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="#" class="check-form">
+                    <form class="check-form">
                         <h4>Sua Estadia</h4>
                         <div class="datepicker">
                             <p>Entrada</p>
-                            <img src="img/calendar.png" alt="">
-                            <input type="text" class="datepicker-1" value="dd / mm / yyyy">
+                            <!-- <img class="pointer" src="img/calendar.png" alt=""> -->
+                            <input type="date" class="" id="dataEntrada" value="dd / mm / yyyy">
                         </div>
                         <div class="datepicker">
                             <p>Saída</p>
-                            <img src="img/calendar.png" alt="">
-                            <input type="text" class="datepicker-2" value="dd / mm / yyyy">
+                            <!-- <img class="pointer" src="img/calendar.png" alt=""> -->
+                            <input type="date" class="pointer" id="dataSaida" value="dd / mm / yyyy">
                         </div>
                         <div class="room-quantity">
                             <div class="single-quantity">
                                 <p>Adultos</p>
-                                <div class="pro-qty"><input type="text" value="0"></div>
+                                <div class="pro-qty"><input id="adultos" type="text" value="0"></div>
                             </div>
                             <div class="single-quantity">
                                 <p>Crianças</p>
-                                <div class="pro-qty"><input type="text" value="0"></div>
+                                <div class="pro-qty"><input id="criancas" type="text" value="0"></div>
                             </div>
                             <!-- <div class="single-quantity last">
                                 <p>Quartos</p>
@@ -115,7 +116,7 @@
                                 <option value="deluxe-plus">Deluxe Plus</option>
                             </select>
                         </div> -->
-                        <button type="submit">Pesquisar</button>
+                        <button type="button" onclick="verificarDisponibilidade()">Pesquisar</button>
                     </form>
                 </div>
             </div>
