--- a/hotel/src/main/resources/static/cadastroCargo.html
+++ b/hotel/src/main/resources/static/cadastroCargo.html
@@ -9,7 +9,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
-        
+        <script src="js/storageManager.js"> </script>
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/cadastroCargo.js"></script>
+
     </head>
     <body>
         <div class="cabecalho">
@@ -30,12 +33,12 @@
             </div>
         </div>
         <div class="navegacao">
-            <h2 id="titulo" class="negrito">Tipo de cargo</h2>
+            <h2 id="titulo" class="negrito">Cargo</h2>
             <hr class="hrLaranja"/>
         </div>
-        <form action="/cadastrarCargo" method="POST" style="margin-bottom: 50px;">
+        <form style="margin-bottom: 50px;">
             <div class="cadastro cadastroCentro">
-                <h1 class="negrito tituloCadastro">Cadastro de Tipos de Cargos</h1>
+                <h1 class="negrito tituloCadastro">Cadastro de Cargos</h1>
                 <div class="campoCadastro centralizarDiv">
                     <h1 class="negrito">Cargo</h1>
                     <input type="text" name="tipoCargo" placeholder="Insira o Nome do Cargo">
@@ -49,7 +52,7 @@
                     </select>
                 </div>
                 <div class="botoesCadastro">
-                    <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
+                    <input type="button" onclick="cadastrarCargo()" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                 </div>
             </div>
         </form>
