--- a/hotel/src/main/resources/static/reservaUsuario.html
+++ b/hotel/src/main/resources/static/reservaUsuario.html
@@ -126,8 +126,8 @@
     <hr/>
     <!-- Room Section Begin -->
     <section class="room-section">
-        <div class="container-fluid">
-                <div class="row">
+        <div id="divReservaDisponivel" class="container-fluid">
+                <!-- <div class="row">
                     <div class="col-lg-6">
                         <div class="ri-slider-item">
                             <div class="ri-sliders owl-carousel">
@@ -160,18 +160,17 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <optgroup label="Quantidade de Quartos">    
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                    </optgroup>
+                                    <option value="0" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
                                 </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
@@ -212,18 +211,17 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <optgroup label="Quantidade de Quartos">    
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                    </optgroup>
+                                    <option value="0" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
                                 </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
@@ -268,18 +266,17 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <optgroup label="Quantidade de Quartos">    
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                    </optgroup>
+                                    <option value="0" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
                                 </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
@@ -325,25 +322,24 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <optgroup label="Quantidade de Quartos">    
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                    </optgroup>
+                                    <option value="0" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
                                 </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            <hr/>
+            <hr/> -->
         </div>
     </section>
     <!-- Room Section End -->
