puxando h2 pra reserva

--- a/hotel/src/main/resources/static/index.html
+++ b/hotel/src/main/resources/static/index.html
@@ -114,7 +114,7 @@
                                 <option value="deluxe-plus">Deluxe Plus</option>
                             </select>
                         </div> -->
-                        <button type="button" onclick="verificarDisponibilidade()">Pesquisar</button>
+                        <button type="button" onclick="verificarReservaIndex()">Pesquisar</button>
                     </form>
                 </div>
             </div>
