--- a/hotel/src/main/resources/static/reservaUsuario.html
+++ b/hotel/src/main/resources/static/reservaUsuario.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script>
+        $(document).ready(function(){
+            carregarDadosReserva();
+        });
+    </script>
 </head>
 
 <body>
