reserva funcionando, falta o crud

--- a/hotel/src/main/resources/static/homeFuncionarioComum.html
+++ b/hotel/src/main/resources/static/homeFuncionarioComum.html
@@ -53,8 +53,7 @@
                             <input type="submit" value="Nova Reserva" class="negrito botaoFuncionarioComum pointer"/>
                         </div>
                         <div class="campoCadastroHome">
-                            <input type="submit" class="negrito botaoFuncionarioComum pointer" value="Checkin 
-Quartos Disponíveis"/>
+                            <input type="submit" class="negrito botaoFuncionarioComum pointer" value="Checkin Quartos Disponíveis"/>
                         </div>
                     </div>
                     <div class="cadastroDireita">
