--- a/hotel/src/main/resources/static/pagamentoUsuario.html
+++ b/hotel/src/main/resources/static/pagamentoUsuario.html
@@ -64,7 +64,8 @@
             <h2 class="informacoes info2">2 Adultos, 1 Criança</h2>
             <h2 class="informacoes info3">1 Quarto Standard</h2>
             <h2 class="informacoes info4 negrito">Total: R$1699,99</h2>
-            <h3>Faça login ou cadastre-se para finalizar sua reserva de modo rápido e seguro!!!</h3>
+            <h3 id="avisoCadastro">Faça login ou cadastre-se para finalizar sua reserva de modo rápido e seguro!!!</h3>
+            <hr style="margin-top: 60px;" class="hrLaranja">
             <div class="formulario" action="">
                 <div class="cadastro">
                     <h1 class="negrito tituloCadastro">Informações de Contato</h1>
