--- a/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
+++ b/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
@@ -9,9 +9,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
-        <script src="js/storageManager.js"></script>
-        <script src="js/tabela.js"></script>
         <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/storageManager.js"></script>
+        <script src="js/diaria.js"></script>
+        <script src="js/tabela.js"></script>
     </head>
     <body>
         <div class="cabecalho">
@@ -40,7 +41,7 @@
         <form action="">
             <div class="cadastro">
                 <h1 class="negrito tituloCadastro">Cadastro Preços Diárias</h1>
-                <table class="table table-hover">
+                <table class="table table-hover" id="tabela_diaria">
                     <tr>
                        <td class="negritoLinhas">Tipo de Quarto</td>
                        <td class="negritoLinhas">Dia Ùtil</td>
@@ -49,58 +50,7 @@
                        <td class="negritoLinhas">Promocional</td>
                        <td></td>
                     </tr>
-                    <tr>
-                       <td class="negritoLinhas" idquarto="1">Standart</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>
-                       <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(1);">
-                       </td>
-                    </tr>
-                    <tr>
-                       <td class="negritoLinhas" idquarto="2">Master</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(2);">
-                        </td>
-                    </tr>
-                    <tr>
-                       <td class="negritoLinhas" idquarto="3">Deluxe</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(3);">
-                        </td>
-                    </tr>
-                    <tr>
-                       <td class="negritoLinhas" idquarto="4">Deluxe Plus</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>R$ 300,00</td>
-                       <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(4);">
-                        </td>
-                    </tr>
-                    <tr>
-                       <td class="negritoLinhas">+ Novo tipo de Quarto</td>
-                       <td></td>
-                       <td></td>
-                       <td></td>
-                       <td></td>
-                       <td>
-                        <img src="img/editar_lapis_30x30px.svg" class="botaoPopup" onclick="OpenEditPopup(5);">
-                        </td>
-                    </tr>
                    </table>
-                <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
             </div>
         </form>
         <footer>
@@ -114,26 +64,27 @@
         </footer>
         <div class="popup">
             <div id="editarPopup">
-                <form action="">
+                <form action="/diaria/edit" onsubmit="EditDiaria()" method="post">
                     <header class="headerPopup">
                         <h1 class="tituloPopup negrito" id="tituloEdit"></h1> 
                     </header>
                     <div class="inputPopup">
                         <label class="title-input">Dia Util</label>
-                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="diaUtil" id="diaUtil" required>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Fim de Semana</label>
-                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="fimDeSemana" id="fimDeSemana" required>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Feriado</label>
-                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="feriado" id="feriado" required>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Promocional</label>
-                        <input type="number" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        <input type="number" class="form-control inputpopupForm" name="promocional" id="promocional" required>
                     </div> 
+                    <input type="hidden" id="idDiaria" name="idDiara">
                     <footer class="footerPopup">
                         <button type="button" class="buttonPopup buttonCancel close negrito" onclick="CloseEditPopup()">Cancelar </button>
                         <button type="submit" class="buttonPopup buttonSuccess negrito">Salvar</button>
