imagem div alteracoes

--- a/hotel/src/main/resources/static/cadastroQuarto.html
+++ b/hotel/src/main/resources/static/cadastroQuarto.html
@@ -55,7 +55,7 @@
                     <div id="radioCargo">
                         <div>
                             <h3 class="negrito">Ativar</h1>
-                            <input type="radio" id="campotrue" name="status" value=true required>
+                            <input type="radio" id="campotrue" name="status" value=true required checked>
                         </div>
                         <div>
                             <h3 class="negrito">Desativar</h1>
