--- a/hotel/src/main/resources/static/homeFuncionarioComum.html
+++ b/hotel/src/main/resources/static/homeFuncionarioComum.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pagamento Funcionário</title>
+        <title>Home Funcionário Comum</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/jquey-mask.js"></script>
-        <script src="js/cliente.js"></script>
 
         <!-- Css Styles -->
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -34,7 +33,7 @@
                 </a>
             </div>
             <div class="logoHome">
-                <a href="#">
+                <a href="http://localhost:8089/homeFuncionarioComum">
                     <img src="img/icons8-casa-64.png" alt="btn-home">
                 </a>
             </div>
@@ -51,14 +50,19 @@
                     <div class="cadastroEsquerda">
                         <div class="campoCadastroHome">
                             <input type="submit" value="Nova Reserva" class="negrito botaoFuncionarioComum pointer"/>
+                            <a href="https://www.google.com/"></a>
                         </div>
                         <div class="campoCadastroHome">
+                            <a href="/checkinQuartoDisponivel">
                             <input type="submit" class="negrito botaoFuncionarioComum pointer" value="Checkin Quartos Disponíveis"/>
+                            </a>
                         </div>
                     </div>
                     <div class="cadastroDireita">
                         <div class="campoCadastroHome">
+                            <a href="/editarReservaFuncionario">
                             <input type="submit" value="Editar Reservas" class="negrito botaoFuncionarioComum pointer"/>
+                            </a>
                         </div>
                     </div>
                 </div>
