--- a/hotel/src/main/resources/static/boleto.html
+++ b/hotel/src/main/resources/static/boleto.html
@@ -62,6 +62,7 @@
             <h2 class="informacoes info3">1 Quarto Standard</h2>
             <h2 class="informacoes info4 negrito">Total: R$1699,99</h2>
             <h3 id="avisoCadastro">Faça login ou cadastre-se para finalizar sua reserva de modo rápido e seguro!!!</h3>
+            <h3 class="linhaUnica"></h3>
         </div>
         <div class="aprovacaoPgto">
             <img src="img/alerta.svg" alt="">
