--- a/hotel/src/main/resources/static/compraEfetivadaCartao.html
+++ b/hotel/src/main/resources/static/compraEfetivadaCartao.html
@@ -63,6 +63,7 @@
             <h2 class="informacoes info2">2 Adultos, 1 Criança</h2>
             <h2 class="informacoes info3">1 Quarto Standard</h2>
             <h2 class="informacoes info4 negrito">Total: R$1699,99</h2>
+            <h3 class="linhaUnica"></h3>
         </div>
         <div class="aprovacaoPgto">
             <img src="img/pagamentoVerificado.svg" alt="">
