--- a/hotel/src/main/resources/static/cadastroTipoQuarto.html
+++ b/hotel/src/main/resources/static/cadastroTipoQuarto.html
@@ -137,7 +137,7 @@
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Insira Imagem</label>
-                        <input accept="image/jpeg" type="file" class="form-control-file" class="form-control inputpopupForm" name="imagem" id="imagem">
+                        <input accept="image/jpeg" type="file" class="form-control-file" class="form-control inputpopupForm" name="imagem" id="imagem" required>
                     </div> 
                     <footer class="footerPopup">
                         <button type="button" class="buttonPopup buttonCancel close negrito" onclick="CloseEditPopup()">Cancelar </button>
