numero pessoas puxando

--- a/hotel/src/main/resources/static/cadastroTipoQuarto.html
+++ b/hotel/src/main/resources/static/cadastroTipoQuarto.html
@@ -133,7 +133,7 @@
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">N° Pessoas</label>
-                        <input type="number" class="form-control inputpopupForm" required name="numeroPessoas" id="numeroPessoas" disabled>
+                        <input type="number" class="form-control inputpopupForm inputDisabled" required name="numeroPessoas" id="numeroPessoas" disabled>
                     </div> 
                     <div class="inputPopup">
                         <label class="title-input">Insira Imagem</label>
