--- a/hotel/src/main/resources/static/checkinQuartoDisponivel.html
+++ b/hotel/src/main/resources/static/checkinQuartoDisponivel.html
@@ -89,8 +89,7 @@
                 </header>
                 <footer class="footerPopup" style="margin-top: auto;">
                     <button type="button" class="buttonPopup negrito" onclick="closePopupCheckin()">Cancelar</button>
-                    <button type="button" class="buttonPopup buttonSuccess close negrito" id="BotaoSubmitDelete" onclick="checkinQuarto(false)">Liberar</button>
-                    <input type="hidden" id="idQuartoSalvar" name="idQuarto">
+                    <button type="button" class="buttonPopup buttonSuccess close negrito" id="botaoCheckinSalvar" onclick="">Liberar</button>
                 </footer>
             </div>
         </body>
