erro no desativar quarto na tela cadastroQuarto

--- a/hotel/src/main/resources/static/cadastroQuarto.html
+++ b/hotel/src/main/resources/static/cadastroQuarto.html
@@ -55,11 +55,11 @@
                     <div id="radioCargo">
                         <div>
                             <h3 class="negrito">Ativar</h1>
-                            <input type="radio" id="campotrue" name="status" value=true required checked>
+                            <input type="radio" id="campotrue" name="status" value="true" required checked>
                         </div>
                         <div>
                             <h3 class="negrito">Desativar</h1>
-                            <input type="radio" id="campofalse" name="status" value=false required>
+                            <input type="radio" id="campofalse" name="status" value="false" required>
                         </div>
                     </div>
                     <div class="botoesCadastro">
