correcao de bugs

--- a/hotel/src/main/resources/static/checkinQuartoDisponivel.html
+++ b/hotel/src/main/resources/static/checkinQuartoDisponivel.html
@@ -85,11 +85,11 @@
             <!--salvar check-in-->
             <div id="popupSalvarCheckin">
                 <header class="headerPopup" style="padding-top: 10px;">
-                    <h3 style="padding: 60px 0 30px 0; color: #ffffff;" class="negrito tituloPopup">Gostaria mesmo de fechar o Quarto?</h3> 
+                    <h3 style="padding: 60px 0 30px 0; color: #ffffff;" class="negrito tituloPopup">Gostaria mesmo de alocar essa reserva nesse quarto?</h3> 
                 </header>
                 <footer class="footerPopup" style="margin-top: auto;">
                     <button type="button" class="buttonPopup negrito" onclick="closePopupCheckin()">Cancelar</button>
-                    <button type="button" class="buttonPopup buttonSuccess close negrito" id="botaoCheckinSalvar" onclick="">Liberar</button>
+                    <button type="button" class="buttonPopup buttonSuccess close negrito" id="botaoCheckinSalvar" onclick="">Alocar</button>
                 </footer>
             </div>
         </body>
