--- a/hotel/src/main/resources/static/homeFuncionarioComum.html
+++ b/hotel/src/main/resources/static/homeFuncionarioComum.html
@@ -50,19 +50,19 @@
                     <div class="cadastroEsquerda">
                         <div class="campoCadastroHome">
                             <input type="submit" value="Nova Reserva" class="negrito botaoFuncionarioComum pointer"/>
-                            <a href="https://www.google.com/"></a>
+                            <!-- <a href="https://www.google.com/"></a> -->
                         </div>
                         <div class="campoCadastroHome">
-                            <a href="/checkinQuartoDisponivel">
+                            <!-- <a href="/checkinQuartoDisponivel"> -->
                             <input type="submit" class="negrito botaoFuncionarioComum pointer" value="Checkin Quartos Disponíveis"/>
-                            </a>
+                            <!-- </a> -->
                         </div>
                     </div>
                     <div class="cadastroDireita">
                         <div class="campoCadastroHome">
-                            <a href="/editarReservaFuncionario">
+                            <!-- <a href="/editarReservaFuncionario"> -->
                             <input type="submit" value="Editar Reservas" class="negrito botaoFuncionarioComum pointer"/>
-                            </a>
+                            <!-- </a> -->
                         </div>
                     </div>
                 </div>
